Ensured the Header Section and Footer Section stretch across entire view

--- a/Example_2/index.css
+++ b/Example_2/index.css
@@ -1,3 +1,4 @@
+/* FIRST EXAMPLE PART
 /* This version uses the 'pixel method' to space the columns */
 /* .container {
     display: grid;
@@ -23,8 +24,37 @@
 } */
 
 /* This is the short version of the 'repeat method' (row, column) */
-.container {
+/* .container {
     display: grid;
     grid-template: repeat(2, 50px) / repeat(3, 1fr);
     grid-gap: 3px;
+} */
+/* ###################################### */
+
+.container {
+    display: grid;
+    grid-gap: 3px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 40px 200px 40px;
+}
+
+.header {
+    /* Stretch the HEADER Section across top */
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+
+    /* Different short-hand versions */
+    /* grid-column: 1 / 3; */
+    /* grid-column: 1 / span 2; */
+    
+    /* If you DON'T KNOW the number of columns you will eventually have */
+    grid-column: 1 / -1;
+}
+
+.menu {}
+
+.content {}
+
+.footer {
+    grid-column: 1 / -1
 }
